# license-detection

./: .gitignore  Cargo.toml  PERSONAL_TODO.md  README.md  benchres.txt  deno.jsonc
.github/workflows/: rust.yml
bench/: MISC_bench.ts  brute_bench.ts  hash_bench.ts  licenseCompute.ts  licenseCompute_bench.ts  licenseDetect_bench.ts  main_bench.ts  storage_bench.ts  workerObjHandoff_bench.ts
licenses/: ctph_settings_override.json  fuzzy_db  fuzzy_db.json  gaoya_db  gaoya_db.json  licenses.json
old_impl/bench/: licenseCompute_bench.ts
old_impl/licenses/: ctph_settings_override.json
old_impl/src/components/: storage.ts
old_impl/src/components/offloading/LicenseDetection/: DetectionScheduler.ts
old_impl/src/types/: License.ts  LicenseDetect.ts
old_impl/tests/: licenseCompute_test.ts  licenseDetect_test.ts  main_test.ts  storage_test.ts
src/: lib.rs  main.rs  main.ts
src/components/: detecting.ts  hashing.ts  minification.ts  storage.ts
src/components/offloading/LicenseComputation/: ComputeScheduler.ts
src/components/offloading/LicenseDetection/: DetectionScheduler.ts  coordinationThread.ts  detectionThread.ts
src/custom_fuzzy/: README.md  mod.rs
src/detecting/: fuzzy_implementation.rs  gaoya_implementation.rs  mod.rs
src/hashing/: mod.rs
src/license_tools/: mod.rs
src/offloading/: mod.rs
src/pipeline_tools/: diffing_pipeline.rs  mod.rs  regex_pipeline.rs
src/scripts/: computeLicenses.ts
src/types/: DetectionScheduler.ts  License.ts  LicenseCompute.ts  LicenseDetect.ts
tests/: database_test.rs  detectionScheduler_test.ts  detection_test.rs  diffing_pipeline_test.rs  fuzzy_impl_test.rs  gaoya_impl_test.rs  hashing_test.rs  hashing_test.ts  licenseCompute_test.ts  licenseDetect_test.ts  pipeline_test.rs  regex_pipeline_test.rs  storage_test.ts  utils.ts
