[package]
name = "whichlicense_detection"
description = "A tool to detect licenses used by the WhichLicense project"
homepage = "https://whichlicense.com"
repository = "https://github.com/whichlicense/license-detection"
readme = "README.md"
version = "1.0.0"
edition = "2021"
authors = ["Duart Snel <duartsnel@icloud.com>"]
license = "Apache-2.0"
exclude = [
    "old_impl/*",
]

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuzzyhash = "0.2.1"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
diff = "0.1"
gaoya = "0.1.2"
fnv = "1.0.3"